[package]
name = "smooth-stream"
version = "0.1.0"
edition = "2021"
description = "smooth output of a stream"
authors = ["Andrew Gazelka <andrew.gazelka@gmail.com>"]
license = "MIT"

[dependencies]
async-stream = "0.3.5"
futures = "0.3.28"
pin-project = "1.0.12"
tokio = { version = "1.27.0", features = ["full"] }
